
[TestWithMonitoring/without_monitoring - 1]
{
 "metadata": {},
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {}
   }
  ]
 }
}
---

[TestWithMonitoring/with_metrics_monitoring - 1]
{
 "metadata": {
  "annotations": {
   "kibana.k8s.elastic.co/monitoring-config-hash": "1132877422"
  }
 },
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {}
   },
   {
    "args": [
     "-c",
     "/etc/metricbeat-config/metricbeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/metricbeat:7.14.0",
    "name": "metricbeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/metricbeat-config",
      "name": "sample-metricbeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring/aerospace/sample/certs",
      "name": "kb-monitoring-local-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/metricbeat/data",
      "name": "metricbeat-data"
     },
     {
      "mountPath": "/usr/share/metricbeat/logs",
      "name": "metricbeat-logs"
     }
    ]
   }
  ],
  "volumes": [
   {
    "name": "kb-monitoring-03f555-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-monitoring-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-local-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-http-certs-public"
    }
   },
   {
    "emptyDir": {},
    "name": "metricbeat-data"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-logs"
   },
   {
    "name": "sample-metricbeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-metricbeat-config"
    }
   }
  ]
 }
}
---

[TestWithMonitoring/with_logs_monitoring - 1]
{
 "metadata": {
  "annotations": {
   "kibana.k8s.elastic.co/monitoring-config-hash": "95064241"
  }
 },
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/filebeat-config/filebeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/filebeat:7.14.0",
    "name": "filebeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/filebeat-config",
      "name": "sample-filebeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/filebeat/data",
      "name": "filebeat-data"
     },
     {
      "mountPath": "/usr/share/filebeat/logs",
      "name": "filebeat-logs"
     },
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   }
  ],
  "volumes": [
   {
    "emptyDir": {},
    "name": "filebeat-data"
   },
   {
    "emptyDir": {},
    "name": "filebeat-logs"
   },
   {
    "name": "kb-monitoring-03f555-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-monitoring-observability-monitoring-ca"
    }
   },
   {
    "emptyDir": {},
    "name": "kibana-logs"
   },
   {
    "name": "sample-filebeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-filebeat-config"
    }
   }
  ]
 }
}
---

[TestWithMonitoring/with_metrics_and_logs_monitoring - 1]
{
 "metadata": {
  "annotations": {
   "kibana.k8s.elastic.co/monitoring-config-hash": "1633666673"
  }
 },
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/metricbeat-config/metricbeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/metricbeat:7.14.0",
    "name": "metricbeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/metricbeat-config",
      "name": "sample-metricbeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring/aerospace/sample/certs",
      "name": "kb-monitoring-local-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/metricbeat/data",
      "name": "metricbeat-data"
     },
     {
      "mountPath": "/usr/share/metricbeat/logs",
      "name": "metricbeat-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/filebeat-config/filebeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/filebeat:7.14.0",
    "name": "filebeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/filebeat-config",
      "name": "sample-filebeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/filebeat/data",
      "name": "filebeat-data"
     },
     {
      "mountPath": "/usr/share/filebeat/logs",
      "name": "filebeat-logs"
     },
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   }
  ],
  "volumes": [
   {
    "emptyDir": {},
    "name": "filebeat-data"
   },
   {
    "emptyDir": {},
    "name": "filebeat-logs"
   },
   {
    "name": "kb-monitoring-03f555-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-logs-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-local-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-http-certs-public"
    }
   },
   {
    "emptyDir": {},
    "name": "kibana-logs"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-data"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-logs"
   },
   {
    "name": "sample-filebeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-filebeat-config"
    }
   },
   {
    "name": "sample-metricbeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-metricbeat-config"
    }
   }
  ]
 }
}
---

[TestWithMonitoring/with_metrics_and_logs_monitoring_with_different_es_ref - 1]
{
 "metadata": {
  "annotations": {
   "kibana.k8s.elastic.co/monitoring-config-hash": "1902028541"
  }
 },
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/metricbeat-config/metricbeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/metricbeat:7.14.0",
    "name": "metricbeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/metricbeat-config",
      "name": "sample-metricbeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring/aerospace/sample/certs",
      "name": "kb-monitoring-local-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/metricbeat/data",
      "name": "metricbeat-data"
     },
     {
      "mountPath": "/usr/share/metricbeat/logs",
      "name": "metricbeat-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/filebeat-config/filebeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/filebeat:7.14.0",
    "name": "filebeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/filebeat-config",
      "name": "sample-filebeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/logs/certs",
      "name": "kb-monitoring-584a4d-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/filebeat/data",
      "name": "filebeat-data"
     },
     {
      "mountPath": "/usr/share/filebeat/logs",
      "name": "filebeat-logs"
     },
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   }
  ],
  "volumes": [
   {
    "emptyDir": {},
    "name": "filebeat-data"
   },
   {
    "emptyDir": {},
    "name": "filebeat-logs"
   },
   {
    "name": "kb-monitoring-03f555-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-monitoring-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-584a4d-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-logs-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-local-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-http-certs-public"
    }
   },
   {
    "emptyDir": {},
    "name": "kibana-logs"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-data"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-logs"
   },
   {
    "name": "sample-filebeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-filebeat-config"
    }
   },
   {
    "name": "sample-metricbeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-metricbeat-config"
    }
   }
  ]
 }
}
---

[TestMetricbeatConfig/no_monitoring - 1]

---

[TestMetricbeatConfig/with_metrics_monitoring - 1]
metricbeat:
    modules:
        - hosts:
            - https://localhost:5601
          metricsets:
            - stats
            - status
          module: kibana
          password: 1234567890
          period: 10s
          ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring/aerospace/sample/certs/ca.crt
            enabled: true
            verification_mode: certificate
          username: elastic-internal-monitoring
          xpack:
            enabled: true
output:
    elasticsearch:
        hosts:
            - https://monitoring-es-http.observability.svc:9200
        password: "1234567890"
        ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs/ca.crt
            verification_mode: certificate
        username: aerospace-sample-observability-monitoring-beat-es-mon-user
processors:
    - add_cloud_metadata: null
    - add_host_metadata: null

---

[TestMetricbeatConfig/with_monitoring_no_CA - 1]
metricbeat:
    modules:
        - hosts:
            - https://localhost:5601
          metricsets:
            - stats
            - status
          module: kibana
          password: 1234567890
          period: 10s
          ssl:
            enabled: true
            verification_mode: certificate
          username: elastic-internal-monitoring
          xpack:
            enabled: true
output:
    elasticsearch:
        hosts:
            - https://monitoring-es-http.observability.svc:9200
        password: "1234567890"
        ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs/ca.crt
            verification_mode: certificate
        username: aerospace-sample-observability-monitoring-beat-es-mon-user
processors:
    - add_cloud_metadata: null
    - add_host_metadata: null

---

[TestMetricbeatConfig/with_metrics_monitoring_no_TLS - 1]
metricbeat:
    modules:
        - hosts:
            - http://localhost:5601
          metricsets:
            - stats
            - status
          module: kibana
          password: 1234567890
          period: 10s
          ssl:
            enabled: false
            verification_mode: certificate
          username: elastic-internal-monitoring
          xpack:
            enabled: true
output:
    elasticsearch:
        hosts:
            - https://monitoring-es-http.observability.svc:9200
        password: "1234567890"
        ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs/ca.crt
            verification_mode: certificate
        username: aerospace-sample-observability-monitoring-beat-es-mon-user
processors:
    - add_cloud_metadata: null
    - add_host_metadata: null

---

[TestMetricbeatConfig/with_metrics_monitoring_and_basePath - 1]
metricbeat:
    modules:
        - basepath: /prefix
          hosts:
            - https://localhost:5601
          metricsets:
            - stats
            - status
          module: kibana
          password: 1234567890
          period: 10s
          ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring/aerospace/sample/certs/ca.crt
            enabled: true
            verification_mode: certificate
          username: elastic-internal-monitoring
          xpack:
            enabled: true
output:
    elasticsearch:
        hosts:
            - https://monitoring-es-http.observability.svc:9200
        password: "1234567890"
        ssl:
            certificate_authorities:
                - /mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs/ca.crt
            verification_mode: certificate
        username: aerospace-sample-observability-monitoring-beat-es-mon-user
processors:
    - add_cloud_metadata: null
    - add_host_metadata: null

---

[TestWithMonitoring/with_metrics_and_logs_monitoring_and_read_only_root_filesystem - 1]
{
 "metadata": {
  "annotations": {
   "kibana.k8s.elastic.co/monitoring-config-hash": "1902028541"
  },
  "creationTimestamp": null
 },
 "spec": {
  "automountServiceAccountToken": false,
  "containers": [
   {
    "name": "kibana",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/metricbeat-config/metricbeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/metricbeat:7.14.0",
    "name": "metricbeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/metricbeat-config",
      "name": "sample-metricbeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/monitoring/certs",
      "name": "kb-monitoring-03f555-ca",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring/aerospace/sample/certs",
      "name": "kb-monitoring-local-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/metricbeat/data",
      "name": "metricbeat-data"
     },
     {
      "mountPath": "/usr/share/metricbeat/logs",
      "name": "metricbeat-logs"
     }
    ]
   },
   {
    "args": [
     "-c",
     "/etc/filebeat-config/filebeat.yml",
     "-e"
    ],
    "env": [
     {
      "name": "POD_IP",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "status.podIP"
       }
      }
     },
     {
      "name": "POD_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.name"
       }
      }
     },
     {
      "name": "NODE_NAME",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "spec.nodeName"
       }
      }
     },
     {
      "name": "NAMESPACE",
      "valueFrom": {
       "fieldRef": {
        "apiVersion": "v1",
        "fieldPath": "metadata.namespace"
       }
      }
     }
    ],
    "image": "docker.elastic.co/beats/filebeat:7.14.0",
    "name": "filebeat",
    "resources": {},
    "volumeMounts": [
     {
      "mountPath": "/etc/filebeat-config",
      "name": "sample-filebeat-config",
      "readOnly": true
     },
     {
      "mountPath": "/mnt/elastic-internal/kb-monitoring-association/observability/logs/certs",
      "name": "kb-monitoring-584a4d-ca",
      "readOnly": true
     },
     {
      "mountPath": "/usr/share/filebeat/data",
      "name": "filebeat-data"
     },
     {
      "mountPath": "/usr/share/filebeat/logs",
      "name": "filebeat-logs"
     },
     {
      "mountPath": "/usr/share/kibana/logs",
      "name": "kibana-logs"
     }
    ]
   }
  ],
  "volumes": [
   {
    "emptyDir": {},
    "name": "filebeat-data"
   },
   {
    "emptyDir": {},
    "name": "filebeat-logs"
   },
   {
    "name": "kb-monitoring-03f555-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-monitoring-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-584a4d-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-es-logs-observability-monitoring-ca"
    }
   },
   {
    "name": "kb-monitoring-local-ca",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-http-certs-public"
    }
   },
   {
    "emptyDir": {},
    "name": "kibana-logs"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-data"
   },
   {
    "emptyDir": {},
    "name": "metricbeat-logs"
   },
   {
    "name": "sample-filebeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-filebeat-config"
    }
   },
   {
    "name": "sample-metricbeat-config",
    "secret": {
     "optional": false,
     "secretName": "sample-kb-monitoring-metricbeat-config"
    }
   }
  ]
 }
}
---
